--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,11 @@
 {
     "root": true,
-    "extends": ["@nuxt/eslint-config"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:vue/vue3-essential",
+        "@vue/eslint-config-typescript",
+        "@vue/eslint-config-prettier"
+    ],
     "rules": {
         "quotes": ["error", "double"],
         "semi": ["error", "always"],
