--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,7 +31,9 @@ jobs:
     - name: Rename build directory
       run: |
         mv ./dist ./_site
-        
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
+
   deploy:
     environment:
       name: github-pages
